# LEZ

./: Cargo.toml  README.md  demo.sh
.github/workflows/: ci.yml
bedrock/: docker-compose.yml
bedrock/scripts/: run_logos_blockchain_node.sh
common/src/: block.rs  transaction.rs
common/src/rpc_primitives/: message.rs
explorer_service/src/pages/: account_page.rs  transaction_page.rs
indexer/core/: Cargo.toml
indexer/core/src/: block_store.rs  config.rs  lib.rs
indexer/service/: Dockerfile
indexer/service/src/: mock_service.rs  service.rs
integration_tests/: Cargo.toml  build.rs
integration_tests/src/: config.rs
integration_tests/tests/: account.rs  amm.rs  indexer.rs  keys_restoration.rs  program_deployment.rs  token.rs  tps.rs  wallet_ffi.rs
integration_tests/tests/auth_transfer/: private.rs  public.rs
key_protocol/: Cargo.toml
key_protocol/src/: lib.rs
key_protocol/src/key_management/: secret_holders.rs
nssa/core/src/: account.rs  circuit_io.rs  commitment.rs  encoding.rs  lib.rs  program.rs
nssa/src/: lib.rs  program.rs  state.rs  validated_state_diff.rs
programs/demo_call_a/: Cargo.toml
programs/demo_call_b/: Cargo.toml
sequencer/service/: Dockerfile
sequencer_core/: Cargo.toml
sequencer_core/src/: config.rs  lib.rs
sequencer_rpc/: Cargo.toml
sequencer_rpc/src/: process.rs
storage/src/: indexer.rs  lib.rs  sequencer.rs
testnet_initial_state/src/: lib.rs
wallet/: Cargo.toml
wallet-ffi/src/: transfer.rs
wallet/src/: chain_storage.rs  config.rs  helperfunctions.rs  lib.rs  privacy_preserving_tx.rs
(+24 files in other folders)
