[package]
name = "integration_tests"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[lints]
workspace = true

[dependencies]
nssa_core = { workspace = true, features = ["host"] }
nssa = { workspace = true, features = ["test-utils"] }
sequencer_core = { workspace = true, features = ["default", "testnet"] }
sequencer_service.workspace = true
wallet.workspace = true
common.workspace = true
key_protocol.workspace = true
indexer_service.workspace = true
serde_json.workspace = true
token_core.workspace = true
ata_core.workspace = true
indexer_service_rpc.workspace = true
sequencer_service_rpc = { workspace = true, features = ["client"] }
wallet-ffi.workspace = true
testnet_initial_state.workspace = true

url.workspace = true

anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
hex.workspace = true
tempfile.workspace = true
bytesize.workspace = true
futures.workspace = true
testcontainers = { version = "0.27.0", features = ["docker-compose"] }

lez_sdk = { path = "../lez_sdk" }
risc0-zkvm.workspace = true
borsh.workspace = true 

[build-dependencies]
risc0-build = "3.0.5"

[package.metadata.risc0]
methods = ["../programs/demo_call_a", "../programs/demo_call_b"]